--- a/Java_Course_TH02/.settings/org.eclipse.core.resources.prefs
+++ b/Java_Course_TH02/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/thanhdnh/hueic/edu/vn/HangHoa.java=UTF-8
 encoding//src/thanhdnh/hueic/edu/vn/KhachHang.java=UTF-8
 encoding//src/thanhdnh/hueic/edu/vn/MainProgram.java=UTF-8
+encoding/<project>=UTF-8
